--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
         Powered By HTC-X Develop With Love Dari Pamanbob
       </div>
     </div>
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+    <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
