--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+    <script src="js/init.js"></script>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -43,7 +44,7 @@
               </div>
             </div>
             <div class="card-footer">
-              <small class="text-white lab_pass">Masukkan Semua Password</small>
+              <small class="text-white lab_pass">Masukkan 1 Password</small>
             </div>
           </div>
         </div>
@@ -59,7 +60,7 @@
               </div>
             </div>
             <div class="card-footer">
-              <small class="text-white">Cookie Result !!</small>
+              <small class="text-white">Sukses : <span class="sukses">0</span> | Gagal : <span class="gagal">0</span></small>
             </div>
           </div>
         </div>
@@ -72,6 +73,7 @@
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"></script>
+    <script src="js/net.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
